--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "tailwindcss-animate": "^1.0.7",
     "use-stick-to-bottom": "^1.1.1",
     "usehooks-ts": "^3.1.1",
+    "youtube-transcript-plus": "^1.1.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.6"
   },
